--- a/index.html
+++ b/index.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>This is my REPIT project</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>This is my REPIT project</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">WebStudio</a>
+        <ul>
+          <li>Studio</li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="malto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <!-- section 1 -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button></button>
+      </section>
+      <!-- section 2 -->
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- section 3 -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+        <li></li>
+        </ul>
+        <ul>
+        <li></li>
+        </ul>
+        <ul>
+        <li></li>
+        </ul>
+        <ul>
+        <li></li>
+        </ul>
+      </section>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
