--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- section 1 -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button></button>
+        <button type="button">Order Service</button>
       </section>
       <!-- section 2 -->
       <section>
@@ -70,20 +70,56 @@
       <section>
         <h2>Our Team</h2>
         <ul>
-        <li></li>
-        </ul>
-        <ul>
-        <li></li>
-        </ul>
-        <ul>
-        <li></li>
-        </ul>
-        <ul>
-        <li></li>
+          <li>
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="mark-guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/tom-ford.jpg"
+              alt="tom-ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="camila-garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/danial-wilson.jpg"
+              alt="danial-wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <a href="index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
